<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraintLayout"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimary">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:srcCompat="@drawable/ic_person_outline_white_24dp"
        android:id="@+id/imageView2"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:text="@string/users"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_users"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:textColor="@android:color/background_light"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person_outline_white_24dp"
        android:id="@+id/imageView3"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="88dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="88dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.43" />


    <TextView
        android:text="@string/experts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tv_experts"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:textColor="@android:color/background_light"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_person_outline_white_24dp"
        android:id="@+id/imageView4"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginRight="16dp"
        app:layout_constraintVertical_bias="0.65999997"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginLeft="16dp"
        app:layout_constraintHorizontal_bias="0.72" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_communities"
        android:text="@string/communities"
        android:textColor="@android:color/background_light"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        android:layout_marginLeft="8dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>
